# vedetta

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.hwaccel  Makefile  README.md  config.example.yml  docker-compose.yml  go.mod  go.sum  vership.toml
.github/workflows/: ci.yml
cmd/vedetta/: doorbell_debounce_test.go  doorbell_loop_test.go  emit_doorbell_test.go  emit_event_test.go  main.go  main_race_test.go  streams.go  token.go  token_test.go  tracing_event_test.go  transcode.go
cmd/watchpost/: main.go
contrib/: detect-hwaccel.sh  setup-hwaccel-ubuntu.sh
deploy/: com.vedetta.plist  vedetta.service
docs/: ARCHITECTURE.md  CAMERAS.md  HARDWARE_DECODE.md  ROADMAP.md  ux-audit-2026-05.md
docs/testing/: push-notifications.md
internal/api/: auth.go  auth_test.go  bodylimit.go  contract_test.go  csp.go  csp_test.go  dashboard_refresh_test.go  detections_sse.go  detections_sse_test.go  doorbell_metrics.go  doorbell_metrics_test.go  generated.go  handler_auth.go  handler_auth_changepw_test.go  handler_camera_control.go  handler_cameras.go  handler_cameras_lastseen_test.go  handler_cameras_manage.go  handler_cameras_manage_test.go  handler_cameras_snapshot_test.go  handler_doorbell_answer.go  handler_doorbell_answer_test.go  handler_doorbell_test.go  handler_events.go  handler_events_counts_kind_test.go  handler_events_download_test.go  handler_events_kind_test.go  handler_health.go  handler_health_test.go  handler_objects.go  handler_objects_camera_test.go  handler_partials.go  handler_people.go  handler_push.go  handler_push_test.go  handler_recordings.go  handler_recordings_test.go  (+31 more)
pypi/: README.md  pyproject.toml
pypi/vedetta/: __init__.py
(+304 files in other folders)
